Unreleased
- Added WebP image support
- Improved handling of paths enclosed in quotes

v1.0 (2021-11-28)
- Initial release