@@ -3,7 +3,7 @@ if (UNIX)
   add_executable(${EXECUTABLE_TITLE} "launcher.c")
 endif ()
 if (WIN32)
-  set(APP_ICON_RESOURCE_WINDOWS "${PROJECT_SOURCE_DIR}/extra/${EXECUTABLE_TITLE}.rc")
+  set(APP_ICON_RESOURCE_WINDOWS "${PROJECT_SOURCE_DIR}/config/${EXECUTABLE_TITLE}.rc")
   add_executable(${EXECUTABLE_TITLE} "launcher.c" ${APP_ICON_RESOURCE_WINDOWS})
 endif()
 set (EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}")
